--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: indianaBones
 Title: Analysis of bone 3D morphology
-Version: 1.0
-Author: Alessio Veneziano
+Version: 1.1
+Author: Alessio Veneziano, Fabio Alfieri
 Maintainer: Alessio Veneziano <veneziano.alessio@gmail.com>
 Description: The package implements some novel tools for the study of bone morphology using micro-Computerized Tomography (microCT). Currently, it includes a set of functions for the segmentation of cancellous and compact bone, and for the characterization of the cancellous architecture. Other functions allow handling and processing 3D image stacks (volumes).
 License: GPL-2
